force-app/main/default/objects/Member__c/Member__c.object-meta.xml
<CustomObject>
    <description>Connects Teams to contacts with the year they are a part of any particular team.</description>
    <label>Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>