force-app/main/default/objects/Member__c/fields/Registration_Year__c.field-meta.xml
<CustomField>
    <fullName>Registration_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adds registration requirements</description>
    <label>Registration Year</label>
    <referenceTo>Registration_Year__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>