force-app/main/default/objects/Member__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year this team member is a part of the team. This information can be confirmed by the roster entries to the NBBA each year.</description>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>